--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "astro": "^5.14.6",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
     "gsap": "^3.13.0",
     "vue": "^3.5.22"
   }
