feat: add OpenAI GPT-4o-mini integration
- Install OpenAI SDK
- Create AI helper module with system prompt
- Smart conversation flow with automation consultant persona
- Automatic lead data extraction from conversations
- Fallback to rule-based system if API key not configured
- Track model_used in database (gpt-4o-mini vs rule-based)
- Keep responses concise (2-3 sentences)
- Natural email collection flow

--- a/env.template
+++ b/env.template
@@ -3,3 +3,7 @@
 PUBLIC_SUPABASE_URL=your-project-url.supabase.co
 PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 
+# OpenAI Configuration
+# Get your API key from https://platform.openai.com/api-keys
+OPENAI_API_KEY=sk-your-openai-api-key
+
