feat: add Vercel adapter for server-side rendering
- Install @astrojs/vercel adapter
- Configure serverless functions for API routes
- Fix deployment build errors
- Now ready for production with OpenAI integration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/vercel": "^8.2.10",
     "@astrojs/vue": "^5.1.1",
     "@supabase/supabase-js": "^2.75.1",
     "astro": "^5.14.6",
