--- a/env.template
+++ b/env.template
@@ -7,3 +7,8 @@ PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 # Get your API key from https://platform.openai.com/api-keys
 OPENAI_API_KEY=sk-your-openai-api-key
 
+# Resend Email Configuration
+# Get your API key from https://resend.com/api-keys
+# For testing, you can use onboarding@resend.dev as the 'from' address
+RESEND_API_KEY=re_your-resend-api-key
+
