--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "gsap": "^3.13.0",
+    "html-pdf-node": "^1.0.8",
     "openai": "^6.5.0",
+    "resend": "^6.2.0",
     "vue": "^3.5.22"
   }
 }
