--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "astro": "^5.14.6",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "gpt-tokenizer": "^3.2.0",
     "gsap": "^3.13.0",
     "html-pdf-node": "^1.0.8",
     "openai": "^6.5.0",
