feat: implement n8n webhook integration for lead automation
🚀 FEATURE: Auto-trigger n8n workflows when leads are qualified

WHAT'S NEW:
- Created n8nTrigger.ts utility for webhook calls
- Integrated n8n trigger in chat.ts
- Added N8N_WEBHOOK_URL to environment config
- Included ready-to-import n8n workflow JSON
- Comprehensive N8N_SETUP_GUIDE.md with step-by-step instructions

HOW IT WORKS:
1. Telos collects lead data (name, email, company, project)
2. When qualified, chat.ts triggers n8n webhook
3. n8n workflow: saves to Supabase → sends email → notifies Slack
4. All automated, no manual intervention needed

FILES CREATED:
- src/lib/n8nTrigger.ts (webhook trigger utility)
- n8n-workflow-telos-lead-pipeline.json (importable workflow)
- N8N_SETUP_GUIDE.md (complete setup documentation)

FILES MODIFIED:
- src/pages/api/chat.ts (added n8n trigger on qualification)
- env.template (added N8N_WEBHOOK_URL config)

SETUP:
1. Set up n8n instance (cloud or self-hosted)
2. Import n8n-workflow-telos-lead-pipeline.json
3. Configure credentials (Supabase, SMTP, Slack)
4. Add N8N_WEBHOOK_URL to .env
5. Test with complete chat flow

BENEFITS:
✅ Automatic lead processing
✅ Email confirmation to leads
✅ Team notifications (Slack)
✅ Extensible (add PDF, CRM, etc.)
✅ Optional (works without n8n)

See N8N_SETUP_GUIDE.md for detailed setup instructions!

--- a/env.template
+++ b/env.template
@@ -12,3 +12,11 @@ OPENAI_API_KEY=sk-your-openai-api-key
 # For testing, you can use onboarding@resend.dev as the 'from' address
 RESEND_API_KEY=re_your-resend-api-key
 
+# n8n Webhook Configuration (Optional)
+# Set up your n8n workflow and get the webhook URL
+# Example: https://your-n8n-instance.com/webhook/telos-new-lead
+# If not set, automation will be skipped (chat still works)
+N8N_WEBHOOK_URL=
+N8N_BASE_URL=
+N8N_SLACK_WEBHOOK=
+
