--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "dotenv": "^17.2.3",
     "gpt-tokenizer": "^3.2.0",
     "gsap": "^3.13.0",
+    "gsap-trial": "^3.12.7",
     "html-pdf-node": "^1.0.8",
+    "html2canvas": "^1.4.1",
+    "lenis": "^1.3.14",
     "openai": "^6.5.0",
     "resend": "^6.2.0",
+    "three": "^0.181.0",
     "vue": "^3.5.22"
   }
 }
