build: Force Vercel cache clear - rebuild without CustomEase
Vercel is deploying from cached build that includes CustomEase.
This empty commit will force a fresh build with updated dependencies.

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "astro",
-  "devCommand": "npm run dev"
+  "devCommand": "npm run dev",
+  "installCommand": "rm -rf node_modules && npm install"
 }
 
