--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,6 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": "astro",
-  "devCommand": "npm run dev",
-  "installCommand": "rm -rf node_modules && npm install"
+  "devCommand": "npm run dev"
 }
 
