--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-pdf-node": "^1.0.8",
     "html2canvas": "^1.4.1",
     "lenis": "^1.3.14",
+    "matter-js": "^0.20.0",
     "openai": "^6.5.0",
     "resend": "^6.2.0",
     "three": "^0.181.0",
